force-app/main/default/objects/clofor_com_cfs__Material__c/clofor_com_cfs__Material__c.object-meta.xml
<CustomObject>
    <label>Material</label>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>MATERIAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>