force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__BillingType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BillingType__c</fullName>
    <label>BILLING TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__BillingType</valueSetName>
    </valueSet>
</CustomField>