force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__Cube__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Cube__c</fullName>
    <label>CUBE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>