force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__FastSlowClassification__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FastSlowClassification__c</fullName>
    <label>FAST/SLOW CLASSIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__FastSlowClassification</valueSetName>
    </valueSet>
</CustomField>