force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MANUFACTURER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MATERIAL</relationshipLabel>
    <relationshipName>Material</relationshipName>
    <type>Lookup</type>
</CustomField>