force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__MaterialPhoto__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaterialPhoto__c</fullName>
    <label>MATERIAL PHOTO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>