force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__MaxMarginRate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxMarginRate__c</fullName>
    <label>MAX MARGIN RATE%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>