force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__MaxSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxSellingUnitPriceUSD__c</fullName>
    <label>MAX SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>