force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__MinSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MinSellingUnitPriceLocal__c</fullName>
    <label>MIN SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>