force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OriginCountry__c</fullName>
    <label>ORIGIN COUNTRY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CountryList</valueSetName>
    </valueSet>
</CustomField>