force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__ParentMaterialID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentMaterialID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT MATERIAL ID</label>
    <referenceTo>clofor_com_cfs__Material__c</referenceTo>
    <relationshipLabel>CHILD MATERIAL</relationshipLabel>
    <relationshipName>ChildMaterial</relationshipName>
    <type>Lookup</type>
</CustomField>