force-app/main/default/objects/clofor_com_cfs__Material__c/fields/clofor_com_cfs__RollupStockOut__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupStockOut__c</fullName>
    <label>ROLLUP NUMBER OF STOCK OUTBOUND</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>