force-app/main/default/objects/clofor_com_cfs__Material__c/recordTypes/clofor_com_cfs__FreshMaterial.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FreshMaterial</fullName>
    <active>true</active>
    <label>Fresh Material</label>
</RecordType>