force-app/main/default/objects/clofor_com_cfs__Material__c/recordTypes/clofor_com_cfs__FrozenMaterial.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__FrozenMaterial</fullName>
    <active>true</active>
    <label>Frozen Material</label>
</RecordType>