force-app/main/default/objects/clofor_com_cfs__Material__c/recordTypes/clofor_com_cfs__NonTemperatureMaterial.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__NonTemperatureMaterial</fullName>
    <active>true</active>
    <label>Non Temperature Material</label>
</RecordType>