force-app/main/default/objects/clofor_com_cfs__Material__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__MaterialName__c</columns>
    <columns>clofor_com_cfs__Manufacturer__c</columns>
    <columns>clofor_com_cfs__OriginCountry__c</columns>
    <columns>clofor_com_cfs__BuyingUnitPriceLocal__c</columns>
    <columns>clofor_com_cfs__BuyingUnitPriceUSD__c</columns>
    <columns>clofor_com_cfs__QuantityPerUnit__c</columns>
    <columns>clofor_com_cfs__StandardMarginRate__c</columns>
    <columns>clofor_com_cfs__StandardSellingUnitPriceLocal__c</columns>
    <columns>clofor_com_cfs__StandardSellingUnitPriceUSD__c</columns>
    <columns>clofor_com_cfs__LWHUnit__c</columns>
    <columns>clofor_com_cfs__Length__c</columns>
    <columns>clofor_com_cfs__Width__c</columns>
    <columns>clofor_com_cfs__Height__c</columns>
    <columns>clofor_com_cfs__MeasurementCBM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>